<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/btnMenu"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="675dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_text_1" />

        <Button
            android:id="@+id/btnSchl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_text_2" />

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_text_3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu">

        <TextView
            android:id="@+id/txtPayRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payRate" />

        <TextView
            android:id="@+id/txtPayType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PayType" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="71dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/txtCurrHW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentHW" />

        <TextView
            android:id="@+id/txtCurrGI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentGI" />

        <TextView
            android:id="@+id/txtCurrNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentNI" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="97dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/txtProjectedHW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/projectedHW" />

        <TextView
            android:id="@+id/txtProjectedGI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/projectedGI" />

        <TextView
            android:id="@+id/txtProjectedNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/projectedNI" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>