<?xml version="1.0" encoding="utf-8"?>
<!--This again expests user auth and current week data-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="375dp"
            android:layout_height="74dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="125dp">

            <TextView
                android:id="@+id/txtPayRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payRate"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtPayType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PayType"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="365dp"
            android:layout_height="113dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/txtCurrHW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentHW"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCurrGI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentGI"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCurrNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentNI"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="125dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/txtProjectedHW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projectedHW"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtProjectedGI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projectedGI"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtProjectedNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projectedNI"
                android:textColor="#FFFFFF"
                android:textSize="24sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>