<?xml version="1.0" encoding="utf-8"?>
<!--This page exepects the user authancation and start date of the data wanted from the database-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:id="@+id/test123"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/year"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="477dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/year"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <TextView
        android:id="@+id/month"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="400dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/month"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="407dp"
        android:foregroundGravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/prevWeek"
            android:layout_width="123dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="424dp"
            android:layout_toStartOf="@+id/nextWeek"
            android:background="#FFFFFF"
            android:text="@string/prevWk"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214" />

        <Button
            android:id="@+id/nextWeek"
            android:layout_width="154dp"
            android:layout_height="43dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="left|center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="424dp"
            android:background="#FFFFFF"
            android:text="@string/nextWk"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DayGroup"
        android:layout_width="405dp"
        android:layout_height="251dp"

        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="166dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year"
        app:layout_constraintVertical_bias="0.263">

        <LinearLayout
            android:id="@+id/dayOneGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayOneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dayOneWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dayTwoGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayTwoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dayTwoWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dayThreeGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/dayThreeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dayThreeWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dayFourGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayFourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dayFourWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dayFiveGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayFiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dayFiveWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daySixGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/daySixText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/daySixWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daySevenGroup"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/daySevenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dayText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/daySevenWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/workHour"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/funtBtnGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/DayGroup"
        android:layout_alignBottom="@+id/DayGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="-161dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942">

        <Button
            android:id="@+id/requestCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestCover"
            android:textColor="#000000" />

        <Button
            android:id="@+id/requestTimeOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestTimeOff"
            android:textColor="#000000" />

        <Button
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendarView"
            android:textColor="#000000" />
    </LinearLayout>


</RelativeLayout>